[package]
name = "ratatuefi"
version = "0.1.0"
edition.workspace = true

[workspace]
resolver = "3"
members = ["examples/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
log = "0.4"
ratatuefi.path = "."
ratatui = {
  version = "0.30",
  default-features = false,
}
uefi = {
  version = "0.38",
  # TODO: maybe remove `qemu` for physical machines?
  features = ["alloc", "global_allocator", "logger", "panic_handler", "qemu"]
}

[dependencies]
log.workspace = true
ratatui-core = "0.1"
thiserror = { version = "2", default-features = false }
uefi.workspace = true
